[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies.libp2p]
version = "0.53.2"
features = ["tokio", "dns", "macros", "noise", "ping", "tcp", "yamux", "upnp"]
